changed color, shadow and area of circle input2 type from text to number

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 									Radius-( r ):
 								</label>
 								<br>
-								<input class="input number" type="text" name="radius" placeholder="radius">
+								<input class="input number" type="number" name="radius" placeholder="radius">
 							</div>
 							<div>
 								<label class="label" for="cir-area">
