adding about and contact details

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 									</h4>
 							</td>
 							<td class="table cells right">
-								<a class="links" href="#">
+								<a class="links" href="#mathematics" selected>
 									Home
 								</a>
 							</td>
 							<td class="table cells right">
-								<a class="links" href="#">
+								<a class="links" href="#About-head">
 									About
 								</a>
 							</td>
 							<td class="table cells right">
-								<a class="links" href="#">
+								<a class="links" href="#table-contact">
 									Contact
 								</a>
 							</td>
@@ -425,6 +425,137 @@
 						</fieldset>
 					</form>
 				</div>
+			</div>
+			<div id="About-wrap">
+				<table id="about-table" width="100%" style="border-collapse: collapse; font-family: helvetica; margin: 20px;">
+					<tr>
+						<th id="About-head" colspan="3">
+							Al-Aleem Academy Mathematics Club
+						</th>
+					</tr>
+					<tr>
+						<td>
+							<article class="article">
+								<img class="about-img" src="img/Adewale.jpg">
+								<h2 class="article-head" title="instructor">
+									Mr. (Dev.) Abdulsamad Adewale
+								</h2>
+							</article>
+						</td>
+						<td>
+							<article class="article">
+								<h2 class="article-head" title="maths club team">
+									Objectives, Goals and Aims.
+								</h2>
+								<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</p>
+							</article>
+						</td>
+						<td>
+							<article class="article">
+								<img class="about-img" src="img/ss3ac.jpg">
+								<h2 class="article-head" title="JS">
+									Maths Club Team
+								</h2>
+								<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</p>
+							</article>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div id="contact-wrap">
+				<fieldset class="fieldset contact">
+					<legend id="table-contact" class="legend">CONTACT
+					</legend>
+					<table id="contact-table" border="0">
+						<caption class="legend">
+							Contact me through the media below
+							<hr>
+						</caption>
+						<tr class="table row">
+							<td>
+								Full Name:
+								<hr>
+							</td>
+							<td>
+								Abdulrasheed Abdulsamad Adewale
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								Email:
+							</td>
+							<td>
+								abdulrasheedabdulsamad1@gmail.com
+								<br>
+								hardaywharlexy@gmail.com
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								Phone Number:
+								<hr>
+							</td>
+							<td>
+								+234 (0) 7068022402 , +234 (0) 8157354220
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								facebook:
+								<hr>
+							</td>
+							<td>
+								Abdulsamad Adewale
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								Country:
+								<hr>
+							</td>
+							<td>
+								Nigeria
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								State:
+								<hr>
+							</td>
+							<td>
+								Kwara State(Residence: Kaduna State)
+								<hr>
+							</td>
+						</tr>
+						<tr class="table row">
+							<td>
+								Address:
+							</td>
+							<td>
+								<small>p</small>32 Fadan Ayu Street Kakuri Kaduna South.
+							</td>
+						</tr>
+					</table>
+				</fieldset>
 			</div>
 			<div id="footer-wrap">
 				<!-- footer note -->
