--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<form id="calc-navigation">
 						<fieldset class="fieldset nav-buttons">
 							<legend class="legend">
-								Area of Plane Shapes
+								Multipurpose Calculator
 							</legend>
 							<a class="calc links" href="#basic">
 								Calculator
