--- a/index.html
+++ b/index.html
@@ -344,20 +344,20 @@
 								PI:
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-PI" value="3.142857142857143" readonly>
+							<input id="cyl-pi" class="input number" type="number" name="cyl-PI" value="3.142857142857143" readonly>
 						</div>
 						<div>
 							<label class="label" for="cyl-radius">
 								Radius-( r ):
 							</label><br>
-							<input class="input number" type="number" name="cyl-radius" placeholder="radius">
+							<input id="cyl-radius" class="input number" type="number" name="cyl-radius" placeholder="radius">
 						</div>
 						<div>
 							<label class="label" for="cyl-height">
 								Height-( h ):
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-height" placeholder="height">
+							<input id="cyl-height" class="input number" type="number" name="cyl-height" placeholder="height">
 						</div>
 						<div>
 							<label class="label" for="cyl-cba">
@@ -367,7 +367,7 @@
 								</small>
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-cba" placeholder="circular base area">
+							<input id="cyl-cba" class="input number" type="number" name="cyl-cba" placeholder="circular base area">
 						</div>
 						<div>
 							<label class="label" for="cyl-csa">
@@ -377,7 +377,7 @@
 								</small>
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-csa" placeholder="curved surface area">
+							<input id="cyl-csa" class="input number" type="number" name="cyl-csa" placeholder="curved surface area">
 						</div>
 						<div>
 							<label class="label" for="cyl-tsa">
@@ -387,7 +387,7 @@
 								</small>
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-tsa" placeholder="total surface area">
+							<input id="cyl-tsa" class="input number" type="number" name="cyl-tsa" placeholder="total surface area">
 						</div>
 						<div>
 							<label class="label" for="cyl-vol">
@@ -397,7 +397,7 @@
 								</small>
 							</label>
 							<br>
-							<input class="input number" type="number" name="cyl-vol" placeholder="volume">
+							<input id="cyl-vol" class="input number" type="number" name="cyl-vol" placeholder="volume">
 						</div>
 						<div>
 							<button id="submit-cyl" class="input submit">answer</button>
