streamlining the img files to the used one's only

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="container">
 			<div id="header-wrap">
 				<header id="header">
-					<img class="img head" src="img/banner.jpg">
+					<img class="img head" src="banner.jpg">
 				</header>
 			</div>
 
@@ -626,7 +626,7 @@
 					<tr>
 						<td>
 							<article class="article">
-								<img class="about-img" src="img/Adewale.jpg">
+								<img class="about-img" src="Adewale.jpg">
 								<h2 class="article-head" title="instructor">
 									Mr. (Dev.) Abdulsamad Adewale
 								</h2>
@@ -649,7 +649,7 @@
 						</td>
 						<td>
 							<article class="article">
-								<img class="about-img" src="img/ss3ac.jpg">
+								<img class="about-img" src="ss3ac.jpg">
 								<h2 class="article-head" title="JS">
 									Maths Club Team
 								</h2>
