commented out the circle calculator function to allow other functions below it to function accordingly

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</header>
 	</div>
 	<div>
-		<nav class="navbar navbar-expand-lg nav sticky-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-#f5c1a9 nav">
 			<h3 class="head">
 				<span class="maths matics">
 					Maths
@@ -35,7 +35,7 @@
 				</marquee>
 			</h3>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" value="c">
-				<span style="background-color: #900748; border-radius: 50%;" class="navbar-toggler-icon"></span>
+				<span style="background-color: #900748;" class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
@@ -69,65 +69,67 @@
 			</div>
 		</nav>
 	</div>
-	<div id="content-wrap">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlinksSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span style="background-color: #f5c1a9; border-radius: 50%;" class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navlinksSupportedContent">
-			<div class="calc-navigation-wrap">
-				<h3 class="multiple">
-					Multipurpose Calculator
-				</h3>
-				<div class="d-flex flex-row flex-wrap flex-container">
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#basic">
-							Calculator
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#converter">
-							Converter
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#circle">
-							Circle
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#triangle">
-							Triangle
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#rectangle">
-							Rectangle
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#rectangle">
-							Square
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#parallelogram">
-							Parallelogram
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#cylinder">
-							Cylinder
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#trapezium">
-							Trapezium
-						</a>
-					</div>
-					<div class = "p-2 my-flex-item">
-						<a class="calc links" href="#num-base">
-							Number Bases
-						</a>
+	<div id="content-wrap" >
+		<div class="navbar sticky-top navbar-light bg-#a21155">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlinksSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span style="background-color: #f5c1a9;" class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navlinksSupportedContent">
+				<div class="calc-navigation-wrap">
+					<h3 class="multiple">
+						Multipurpose Calculator
+					</h3>
+					<div class="d-flex flex-row flex-wrap flex-container">
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#basic">
+								Calculator
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#converter">
+								Converter
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#circle">
+								Circle
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#triangle">
+								Triangle
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#rectangle">
+								Rectangle
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#rectangle">
+								Square
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#parallelogram">
+								Parallelogram
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#cylinder">
+								Cylinder
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#trapezium">
+								Trapezium
+							</a>
+						</div>
+						<div class = "p-2 my-flex-item">
+							<a class="calc links" href="#num-base">
+								Number Bases
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
