adding little styling adjustment to the navigation calc links and col-md-5 size for medium screens

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</marquee>
 			</h3>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" value="c">
-				<span style="background-color: #900748;" class="navbar-toggler-icon"></span>
+				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
@@ -70,9 +70,9 @@
 		</nav>
 	</div>
 	<div id="content-wrap" >
-		<div class="navbar sticky-top navbar-light bg-#a21155">
+		<div class="navbar sticky-top navbar-dark bg-#a21155">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlinksSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span style="background-color: #f5c1a9;" class="navbar-toggler-icon"></span>
+					<span style="box-shadow: 1px 1px 3px black, -1px -1px 3px black;" class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navlinksSupportedContent">
 				<div class="calc-navigation-wrap">
@@ -136,7 +136,7 @@
 		</div>
 		<div>
 			<div class="row">
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="basic-calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="basic-calc-wrap">
 					<h3 id="basic" class="head">
 						Calculator
 					</h3>
@@ -209,7 +209,7 @@
 						<button id="reset-bas" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Number-Base-calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Number-Base-calc-wrap">
 					<h3 id="num-base" class="head">
 						Number Bases
 					</h3>
@@ -260,7 +260,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Triangle-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Triangle-Calc-wrap">
 					<h3 id="triangle" class="head">
 						Triangle
 					</h3>
@@ -302,7 +302,7 @@
 						<button id="reset-tri" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Rectangle-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Rectangle-Calc-wrap">
 					<h3 id="rectangle" class="head">
 						Rectangle/Square
 					</h3>
@@ -346,7 +346,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Circle-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Circle-Calc-wrap">
 					<h3 id="circle" class="head">
 						Circle
 					</h3>
@@ -409,7 +409,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Cylinder-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Cylinder-Calc-wrap">
 					<h3 id="cylinder" class="head">
 						Cylinder
 					</h3>
@@ -490,7 +490,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Trapezium-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Trapezium-Calc-wrap">
 					<h3 id="trapezium" class="head">
 						Trapezium
 					</h3>
@@ -529,7 +529,7 @@
 						<button id="reset-trap" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-sm-10 calc-wrap" id="Parallelogram-Calc-wrap">
+				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Parallelogram-Calc-wrap">
 					<h3 id="parallelogram" class="head">
 						Parallelogram
 					</h3>
